--- a/ligaplus/generators/users.ipynb
+++ b/ligaplus/generators/users.ipynb
@@ -14,7 +14,7 @@
     "RECORDS=1000\n",
     "LOCATION_RANGE=(1,17) # 17 locations\n",
     "SEGMENT_RANGE=(1,3) # 3 segments\n",
-    "FUTURE=datetime.date(2999,12,31)\n",
+    "\tFUTURE=datetime.date(2999,12,31)\n",
     "GENDERS=[\"M\",\"F\",\"O\"]\n",
     "BIRTH_DATE_START=datetime.date(1950,1,1)\n",
     "BIRTH_DATE_RANGE=365*55 # 55 years\n",
