Updates in structure

--- a/ligaplus/generators/content.ipynb
+++ b/ligaplus/generators/content.ipynb
@@ -85,7 +85,7 @@
     "import random\n",
     "\n",
     "CONTENT_HEADER = \"\"\"DELETE FROM public.\"Content\"; \n",
-    "INSERT INTO public.\"Content\"( \\n\"Id\", \"CategoryId\", \"Description\", \"Duration\", \"StartDate\", \"EndData\") \n",
+    "INSERT INTO public.\"Content\"( \\n\"Id\", \"CategoryId\", \"Description\", \"Duration\", \"StartDate\", \"EndDate\") \n",
     "VALUES \\n\"\"\"\n",
     "CONTENT_ROW = \"({id}, '{category_id}', '{description}', {duration}, '{start_date}', '{end_date}')\"\n",
     "CONTENT_SQL_FILE = '../18_insert_content.sql'\n",
